Updated Button Animation

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</div>
 
 		<div class="header__text-box">
-			<h1 class="heading-primary">The Untrodden Path</h1>
+			<a class="heading-primary" href="#tours">Are You Ready To Explore?</a>	
 		</div>
 
 	</header>
@@ -29,7 +29,7 @@
 			<h4 class="quote__sub">&mdash;Bill Bryson</h4>
 
 		</section>
-		<section class="tours">
+		<section class="tours" id="tours">
 			<h1 class="tours__header">Our recommended tours</h1>
 			<div class="tours__content">
 				<img src="img/new-zealand.jpg" alt="new-zealand" class="tours__img">
